src/objects/loan__Savings_Payment_Collection_Record__c.object
<CustomObject>
    <description>Savings Payment Collection Record</description>
    <fields>
        <fullName>loan__Actual_Collected_Amount__c</fullName>
        <label>Actual Collected Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Check__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Check</label>
        <referenceTo>loan__Check__c</referenceTo>
        <relationshipLabel>Savings Payment Collection Record</relationshipLabel>
        <relationshipName>Savings_Payment_Collection_Record</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client</label>
        <referenceTo>loan__Client__c</referenceTo>
        <relationshipLabel>Savings Payment Collection Record</relationshipLabel>
        <relationshipName>Savings_Payment_Collection_Record</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Collection_Date__c</fullName>
        <description>Collection_Date</description>
        <label>Collection Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Mandatory_Payment__c</fullName>
        <label>Mandatory Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Overdues__c</fullName>
        <label>Overdues</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Payment_Mode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Mode</label>
        <referenceTo>loan__Payment_Mode__c</referenceTo>
        <relationshipLabel>Savings Payment Collection Record</relationshipLabel>
        <relationshipName>Savings_Payment_Collection_Record</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Savings_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Savings Account</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please select an active Client.</errorMessage>
            <filterItems>
                <field>loan__Savings_Account__c.loan__Client_ID__r.loan__Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>loan__Savings_Account__c</referenceTo>
        <relationshipLabel>Savings Payment Collection Record</relationshipLabel>
        <relationshipName>Savings_Payment_Collection_Record</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Total_Collection_Amount__c</fullName>
        <formula>loan__Overdues__c  +  loan__Mandatory_Payment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Collection Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Savings Payment Collection Record</label>
    <nameField>
        <displayFormat>PCN-{0000000000}</displayFormat>
        <label>Payment Collection ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Savings Payment Collection Record</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>loan__Check_Check_Amount</fullName>
        <active>true</active>
        <errorConditionFormula>loan__Actual_Collected_Amount__c  != loan__Check__r.loan__Check_Amount__c</errorConditionFormula>
        <errorMessage>Collection amount doesn&apos;t match check amount.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>loan__Check_Payment_Mode</fullName>
        <active>true</active>
        <errorConditionFormula>loan__Payment_Mode__r.Name = &apos;Check&apos; &amp;&amp; ISBLANK( loan__Check__c )</errorConditionFormula>
        <errorMessage>Please input a check number.</errorMessage>
    </validationRules>
</CustomObject>